--- a/Rails/SimplePhotoGallery/Trunk/app/views/shared/_sidebar.rhtml
+++ b/Rails/SimplePhotoGallery/Trunk/app/views/shared/_sidebar.rhtml
@@ -1,5 +1,10 @@
 <div id="sidebar">
 <% if logged_in? %>
+<% begin %>
+<%= image_tag(@user.avatar.public_filename(:tiny), :class=>"avatar") %>
+<% rescue %>
+<% end %>
+
 <ul>
 	<li><%=button_to "Upload Photos", user_new_photo_path(current_user), :class=>"large_button", :method=>"get" %></li>
 	<li><%=button_to "Create an Album", user_new_album_path(current_user), :class=>"large_button", :method=>"get" %></li>
