git-svn-id: file:///Users/will/rendale@88 651630e0-a32e-0410-a001-f4242d931729

--- a/Rails/SimplePhotoGallery/Trunk/app/views/shared/_sidebar.rhtml
+++ b/Rails/SimplePhotoGallery/Trunk/app/views/shared/_sidebar.rhtml
@@ -1,10 +1,11 @@
 <div id="sidebar">
-<% if logged_in? %>
 <% begin %>
 <%= image_tag(@user.avatar.public_filename(:tiny), :class=>"avatar") %>
+<%= @user.login%>'s photos
 <% rescue %>
 <% end %>
-
+	
+<% if logged_in? %>
 <ul>
 	<li><%=button_to "Upload Photos", user_new_photo_path(current_user), :class=>"large_button", :method=>"get" %></li>
 	<li><%=button_to "Create an Album", user_new_album_path(current_user), :class=>"large_button", :method=>"get" %></li>
