git-svn-id: file:///Users/will/rendale@89 651630e0-a32e-0410-a001-f4242d931729

--- a/Rails/SimplePhotoGallery/Trunk/app/views/user_photos/show.rhtml
+++ b/Rails/SimplePhotoGallery/Trunk/app/views/user_photos/show.rhtml
@@ -2,11 +2,11 @@
 <div id="inner_content">
 <div class="photo_sizes">
 	<ul class="photo_size_list">
-		<li><%=link_to "tiny", @photo.public_filename(:tiny).downcase, :target=>"_blank" %></li>
-		<li><%=link_to "thumbnail", @photo.public_filename(:thumb).downcase,:target=>"_blank" %></li>
-		<li><%=link_to "small", @photo.public_filename(:small).downcase,:target=>"_blank" %></li>
-		<li><%=link_to "large", @photo.public_filename(:large).downcase,:target=>"_blank" %></li>
-		<li><%=link_to "Original", @photo.public_filename.downcase,:target=>"_blank" %></li>
+		<li><%=link_to "tiny", @photo.public_filename(:tiny), :target=>"_blank" %></li>
+		<li><%=link_to "thumbnail", @photo.public_filename(:thumb),:target=>"_blank" %></li>
+		<li><%=link_to "small", @photo.public_filename(:small),:target=>"_blank" %></li>
+		<li><%=link_to "large", @photo.public_filename(:large),:target=>"_blank" %></li>
+		<li><%=link_to "Original", @photo.public_filename,:target=>"_blank" %></li>
 	</ul>
 </div>
 <%=image_tag(@photo.public_filename(:large))%>
