--- a/Rails/SimplePhotoGallery/Trunk/app/views/user_photos/index.rhtml
+++ b/Rails/SimplePhotoGallery/Trunk/app/views/user_photos/index.rhtml
@@ -1,4 +1,9 @@
 <div id="content">
+	<% if flash[:notice]%>
+	<div class="notice">
+	<%= flash[:notice]%>
+	</div>
+	<% end %>	
 	<ul id="user_photo_stream">
 	<% @photos.each do |photo| %>
 		<li>
