--- a/Rails/SimplePhotoGallery/Trunk/app/views/shared/_small_photo.rhtml
+++ b/Rails/SimplePhotoGallery/Trunk/app/views/shared/_small_photo.rhtml
@@ -7,4 +7,7 @@
 <% if not params[:controller].include?("user") %>
 <div style="padding:0px;margin:2px 0 0 0;color:#777; border:0px">Uploaded By: <%= small_photo.user.login %></div>
 <% end %>
+<% user_area do %>
+<%= link_to "delete photo", user_photo_path(@user, small_photo), :method=>:delete, :confirm => "are you sure you want to delete this photo?" %>
+<% end %>
 </h6>
