style and layout tweaks
git-svn-id: file:///Users/will/rendale@137 651630e0-a32e-0410-a001-f4242d931729

--- a/minor/julia/trunk/public/stylesheets/common.css
+++ b/minor/julia/trunk/public/stylesheets/common.css
@@ -62,3 +62,17 @@ ul.top_navigation li a{
   font-size:16px;
   line-height:24px;
 }
+
+body.schedule table{
+  width:500px;
+  font-size:14px;
+  background:#eee;
+}
+
+body.schedule table td.day{
+  width:150px;
+}
+
+body.schedule table td.time{
+  width:150px;
+}
