--- a/minor/julia/trunk/public/stylesheets/splash.css
+++ b/minor/julia/trunk/public/stylesheets/splash.css
@@ -17,6 +17,15 @@ html, body{
   margin-left:-425px;
 }
 
+.content_window_pages{
+  height:600px;
+  width:860px;
+  position:absolute;
+  left:50%;
+  margin-top:30px;
+  margin-left:-425px;
+}
+
 .main{
   float:left;
   height:600px;
